[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Terminal2.tres" type="DynamicFont" id=1]
[ext_resource path="res://Asset/Scritte/ScrittaExit.png" type="Texture" id=2]
[ext_resource path="res://Asset/Scritte/ScrittaNext.png" type="Texture" id=3]
[ext_resource path="res://Fonts/VideoTerminalScreen.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Screens/EndLevelScreen.gd" type="Script" id=5]
[ext_resource path="res://Asset/Musica/hai vinto-2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Screens/LoadingScreen.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 192, 64 )

[node name="EndLevelScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BlackOverlay"]
margin_left = 384.0
margin_top = 192.0
margin_right = 896.0
margin_bottom = 512.0
color = Color( 0.054902, 0.0431373, 0.129412, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BlackOverlay/ColorRect"]
margin_left = 96.0
margin_top = 32.0
margin_right = 416.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.298039, 1 )
text = "Successo!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="BlackOverlay/ColorRect"]
margin_top = 128.0
margin_right = 512.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "Hai completato il livello"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TouchScreenButton" parent="BlackOverlay/ColorRect"]
position = Vector2( 288, 224 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
shape = SubResource( 2 )

[node name="Exit" type="TouchScreenButton" parent="BlackOverlay/ColorRect"]
position = Vector2( 32, 224 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 2 )
shape = SubResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LoadingScreen" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="BlackOverlay/ColorRect/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="BlackOverlay/ColorRect/Exit" to="." method="_on_Exit_pressed"]
